css/custom.css
/*!
Code by Laureano Ruiz Pérez for its Web Portfolio.
Remember using ";"
Remember the tree style sintax (dots, #, parents...)
*/

/* trasition: to smooth the effect of the theme changer */
body {
    overflow-x: hidden;
    transition: all 0.6s;
    transition-property: color, background-color, fill, border-color;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
    }

body.dark {
    background: #212121;
    color: #fafafa;
}

nav {
    position:relative;
    z-index: 999;
    background-color: transparent;
}

/* CSS variables. Not needed for the effect to work. */
/* NOT OOS PINK but a lighter vversion because the OOS pink looks too intense */
:root {
  --base: #e64467;
  --bg-blend: multiply;
  --blur: 0px;
  --fg-blend: lighten;
  --foreground: #000000;
  --opacity: 1;
  --spacing: 0px;
}
.img-wrapper {
    background-color: var(--base);
    display:  flex;
    flex:  1 1 100%;
    height: 100%;
    overflow: hidden;
    padding: var(--spacing);
    position: relative;
    border-radius: 50%;
    height: 170px;
    width: 170px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2rem;
    margin-top: 1rem;
}

.img-wrapper img {
    filter: grayscale(100%) contrast(1) blur(var(--blur));
    flex: 1 0 100%;
    max-width: 100%;
    height: auto;
    mix-blend-mode:  var(--bg-blend);
    object-fit: cover;
    opacity: var(--opacity);
    position: relative;
    width: 100%;
}

.img-wrapper::before {
    background-color: var(--foreground);
    bottom: 0;
    content:'';
    height: 100%;
    left:  0;
    mix-blend-mode: var(--fg-blend);
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    z-index: 1;
}

/*!
".nav-wrapper" is the main navbar with all the components, it uses "display:flex" so it can be centered
Language selector is ".lang-drop", and the theme changer is ".theme-changer"
They are separated, but use the same hover effect, so its contained on a single line ("nav ul li:hover, nav ul li.lang-drop > a:hover...)
Some elements have their own .dark profile, but others don't, because the dark theme is achieved removing other class.
*/

nav .container {
    height: 100%;
}

.nav-wrapper {
    display: flex;
    justify-content: center;
}

nav ul li.lang-drop {
    position: absolute;
    right: 0;
    padding: 0rem 1rem 0rem 1rem;
    -webkit-tap-highlight-color: transparent;
}

nav ul li.theme-changer {
    position: absolute;
    left: 0;
    padding: 0rem 1rem 0rem 1rem;
    -webkit-tap-highlight-color: transparent;
}

.lang-drop, .theme-changer {
    height: 100%;
    display: flex;
    align-items: center;
}

.lang-drop svg path, .theme-changer svg path {
    fill: #424242;
}

body.dark .lang-drop svg path, body.dark .theme-changer svg path {
    fill: #BDBDBD;
}

nav ul li.lang-drop:hover, nav ul li.theme-changer:hover {
    background-color: rgba(0, 0, 0, 0.04);
    cursor:pointer;
}

nav ul li.lang-drop svg, nav ul li.theme-changer svg {
    width: 24px;
    height: 24px;
}

.section {
    padding-top: 2.5rem;
    padding-bottom: 2.5rem;
}

@font-face {
    font-family: "manrope";
    src: url("../fonts/manrope-bold.otf");
}

#intro {
    padding-top: 1rem;
    padding-bottom: 0rem;
}

#intro .container {
    position: relative;
    z-index: 1;
}

#gradient {
    background-image: linear-gradient(rgba(255, 255, 255, 0), white);
    height: 50px;
    z-index: 1000;
    position: relative;
}

body.dark #gradient {
    background-image: linear-gradient(rgba(255, 255, 255, 0), #212121);
}

canvas {
    position: absolute;
}

#curriculum p.oospink-text {
    margin-bottom: 0rem;
    font-weight: 500;
    text-align: right;
    font-family: "manrope", monospace;
}

#curriculum p {
    margin: 0.5rem 0rem;
}

#curriculum .col {
    padding-bottom: 0.5rem;
}

#curriculum svg {
    height: 50px;  
    margin-top: 0.4rem; 
    position: relative;
    float: right;
}

#curriculum svg path {
    fill: #E0E0E0;
}

body.dark #curriculum svg path {
    fill: #424242;
}

.card-bottom {
    position: absolute;
    right: 24px;
    bottom: 24px;
}

#modal-design .btn {
    display: flex;
    align-items: center;
    padding-left: 12px;
    margin-left: 12px;
}

body.dark .modal, body.dark #modal-design .modal-footer, body.dark #modal-design .modal-content {
    background-color: #212121;
}

#design svg {
    width: 20px;
    height: 20px;
    margin-right: 0.5rem;
}

.card {
    border-radius: 8px;
    border-style: solid;
    border-width: 1px;
    border-color: #CFCFCF;
    overflow: hidden;
    cursor:pointer;
    -webkit-tap-highlight-color: transparent;
}

/* This is not z-depth 2 neither 3, instead is a midpoint between both made by me */
.card:hover {
    transition: box-shadow .25s;
    box-shadow: 0 6px 10px 1px rgba(0, 0, 0, 0.14), 0 2px 12px 1px rgba(0, 0, 0, 0.12), 0 4px 4px -2px rgba(0, 0, 0, 0.25);
}

body.dark .card {
    background-color: #212121;
    border-color: #424242;
}

.md2card {
    box-shadow: none;
}

.md2card:hover {
    transition: box-shadow .25s;
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
}

body.dark .md2card:hover {
    transition: box-shadow .25s;
    box-shadow: 0 8px 17px 2px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
}

.card .card-content {
    overflow: auto;
    color: #FAFAFA;
    padding: 20px;
}

#modal-design svg path {
    fill: #ffffff;
}

.materialboxed:hover:not(.active) {
  opacity: 1;
}

.hero-titles{
    font-family: "manrope", monospace;
    font-size: 25px;
    letter-spacing: 4px;
    color: #212121;
    }

.subtitle{
    font-size: 17px;
    font-family: "manrope", monospace;
    color: #212121;
}

#intro svg {
    fill: #E32D55;
    width: 20px;
    height: 20px;
    margin-right: 0.5rem;
}

#intro .btn {
    color: #212121;
    font-weight: bold;
    background-color: transparent;
    border: 2px solid #E32D55;
    display: inline-flex;
    align-items: center;
}

body.dark #intro .btn {
    color: #E32D55;
}

body.dark .hero-titles{
    color: #fafafa;
    }

body.dark .subtitle{
    color: #fafafa;
}

#contact {
    padding: 0rem;
}

/* Colors of the input lines on the email form */
.input-field input[type=text]:focus:not([readonly]) {
     border-bottom: 1px solid #E32D55;
     box-shadow: 0 1px 0 0 #E32D55;
}

.input-field input[type=email]:focus:not([readonly]) {
     border-bottom: 1px solid #E32D55;
     box-shadow: 0 1px 0 0 #E32D55;
}

textarea.materialize-textarea:focus:not([readonly]) {
  border-bottom: 1px solid #E32D55;
  box-shadow: 0 1px 0 0 #E32D55;
}

textarea.materialize-textarea:focus:not([readonly]) + label {
    color: #f50057;
}

#modal-design {
    left:0;
    right:0;
    top:0 !important;
    bottom:0;
    margin:auto;
    border-radius: 8px;
    max-height: 40%;
    max-width:40%;
}

.design-dictionary {
    display: none;
}

.waves-effect.waves-pink .waves-ripple {
     background-color: rgba(227, 45, 85, 0.50);
   }
           

#social {
    display: flex;
    justify-content: space-around;
    padding: 0.8rem 24rem;
}

#social > a {
    display: flex;
    align-items: center;
}

#social svg {
    width: 34px;
    height: 34px;
}

#copy {
    padding: 1.4rem;
    font-family: "manrope", monospace;
    font-weight: 700;
    font-size: small;
    }

.modal.bottom-sheet {
    max-height: 75%;
}

.modal.bottom-sheet h5 {
    margin-top: 0.656rem;
}

#modal-mailform label {
    color: #212121;
}

body.dark #modal-mailform {
    background-color: #212121;
}

body.dark #modal-mailform .title {
    color: #E0E0E0;
}

body.dark #modal-mailform label {
    color: #E0E0E0;
}

body.dark #modal-mailform input{
    color: #E0E0E0;
}

body.dark #modal-mailform .btn-flat {
    color: #616161;
}

#modal-mailform svg {
    top: -0.2rem;
    position: relative;
    width: 28px;
    height: 28px;
}

#modal-mailform svg path {
    fill: #424242;
}

body.dark #modal-mailform svg path {
    fill: #E0E0E0;
}

#modal-mailform .title {
    font-family: "manrope", monospace;
    color: #212121;
}

.page-footer svg path {
    fill: #212121;
}

.oospink {
  background-color: #e32d55 !important;
}

.oospink-text {
  color: #E32D55 !important;
}

@media only screen and (min-width: 992px) {
    #modal-mailform.bottom-sheet {
        width: 50%;
        border-radius: 8px 8px 0 0;
        margin: auto;
    } 
  }

.btn, .btn-large, .btn-flat {
    border-radius: 4px;
    text-transform: none;
    font-family: "Roboto", sans-serif;
}

/* Trying to copy the hide-on-med-and-down class of MaterializeCSS */
@media only screen and (max-width: 992px) {
    #social {
        padding: 1.1rem 12rem;
    }
}

@media only screen and (max-device-width: 720px) {
    .container {
        width: 85%;
    }

    #curriculum p.oospink-text {
        text-align: left;
    }

    #curriculum svg {
       display: none;
    }

    #social {
        padding: 1.1rem 0rem;
        }
    #modal-design {
        max-height: 80%;
        max-width:90%;
    }
}

